# pynlp-doe

./: .gitignore  README.md  chatgpt-token-classification.py  environment.yml  experiment_data.csv  main.py  ner_task_2.py  ner_task_script.py  pyproject.toml  requirements.txt  run_anova_test.py  run_ner_experiment.py  run_sklearn_toy_experiment.py
notebooks/: ANOVA 3-way.ipynb  ANOVA Generico.ipynb  Untitled.ipynb
pynlpdoe/anova/: __init__.py  anova.py
pynlpdoe/experiments/: __init__.py  data.py  experiment.py  factors.py
scripts/: ner_task_3.py  ner_task_script.py
